практически всё реализ

--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=main
 
 # Database Settings
-spring.datasource.url=jdbc:postgresql://localhost:5433/tp
+spring.datasource.url=jdbc:postgresql://localhost:5433/project
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
