--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=main
 
 # Database Settings
-spring.datasource.url=jdbc:postgresql://localhost:5433/project
+spring.datasource.url=jdbc:postgresql://localhost:5432/tp
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 # Allows for auto creation of tables
 spring.jpa.hibernate.ddl-auto = update
+
